tests/Core/negative/test003.jvc
-- matching on non-data

type List {
  nil : List;
  cons : Any -> List -> List;
};

case \x x of nil := nil
